[workspace]
resolver = "2"
members = ["elmio-macro", "elmio-core", "elmio-cli"]

[workspace.package]
authors = ["Success Kingsley <hello@xosnrdev.tech>"]
license = "Apache-2.0"
repository = "https://github.com/xosnrdev/elmio"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0.214", features = ["derive"] }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
