[workspace]
resolver = "2"
members = ["elmio-cli", "elmio-core", "elmio-macro"]

[workspace.package]
authors = ["Success Kingsley <hello@xosnrdev.tech>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/xosnrdev/elmio"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
