[package]
name = "elmio-cli"
version = "0.1.0"
edition = "2021"
authors = ["Success Kingsley <hello@xosnrdev.tech>"]
license = "Apache-2.0"
repository = "https://github.com/xosnrdev/elmio"
categories = ["command-line-utilities", "web-programming", "development-tools"]
keywords = ["cli-tools", "web-development"]
description = """
A command-line tool for the Elmio web framework.
"""

[[bin]]
name = "elmio"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
toml = "0.8.19"
serde = { workspace = true }
regex = "1.11.1"
sha2 = "0.10.8"
walkdir = "2.5.0"
data-encoding = "2.6.0"
fs_extra = "1.3.0"
http = "1.1.0"
base64 = "0.22.1"
mime_guess = "2.0.5"
httparse = "1.9.5"
ureq = "2.10.1"
zip-extract = "0.2.1"
convert_case = "0.6.0"
tempfile = "3.14.0"
