[package]
name = "elmio-core"
version = "0.2.0"
edition = "2021"
authors = ["Success Kingsley <hello@xosnrdev.tech>"]
license = "Apache-2.0"
repository = "https://github.com/xosnrdev/elmio"
categories = ["wasm", "web-programming"]
keywords = ["web", "framework", "elm-architecture", "webassembly"]
description = """
The Rust core of the Elmio framework.
"""

[lib]
path = "src/lib.rs"

[dependencies]
maud = "0.26.0"
serde = { workspace = true }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.132"
wasm-bindgen = { version = "0.2.95", features = ["serde-serialize"] }
