[package]
name = "elmio-core"
version = "0.2.1"
edition.workspace = true
categories = ["wasm", "web-programming"]
keywords = ["web", "framework", "elm-architecture", "webassembly"]
description = "The Rust core of the Elmio framework."
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
maud = "0.27.0"
serde = { workspace = true }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.140"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
