[package]
name = "elmio-macro"
version = "0.2.0"
edition.workspace = true
categories = ["wasm", "web-programming"]
keywords = ["procedural-macro", "elm-architecture", "webassembly"]
description = """
Procedural macros for the Elmio framework.
"""

[lib]
proc-macro = true

[dependencies]
quote = "1.0.37"
syn = "2.0.87"
