[package]
name = "elmio-macro"
version = "0.2.1"
edition.workspace = true
categories = ["wasm", "web-programming"]
keywords = ["procedural-macro", "elm-architecture", "webassembly"]
description = "Procedural macros for the Elmio framework."
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.39"
syn = "2.0.99"
